ik ben vergeten te committen wololo - enkele margins, grid en overflow fix wololo

--- a/gulp-resources/sass/style.scss
+++ b/gulp-resources/sass/style.scss
@@ -1274,10 +1274,12 @@ footer {
 
   main {
 
+    overflow: hidden;
+
     section {
 
       .big-grid {
-        grid-template-rows: 90px 45px 160px 80pt auto;
+        grid-template-rows: 90px 45px 160px 90pt auto;
         grid-column-gap: 10pt;
         min-height: 100vh;
         height: auto;
